tests/NormalTests/paczka1/fuzzy1/77938259.err
Error in line 2: hWrttbf0 A300 10,0
Error in line 3: hWrttbf0 A843 48,0
Error in line 5: EmHz A665 23,2
Error in line 12: hWÁttbf0 S989 0,7
Error in line 11: Af0iXyfpvv S989 76,8
Error in line 9: hWrttbf0 S989 0,7
Error in line 17: EmHz A843 80,0
Error in line 23: S989 A300 71,99
Error in line 29: S989 A665 1,7
Error in line 26: qMQDSWd3Avz A665 5,1
Error in line 36: S989 A84% %,6
Error in line 32: S989 A300 82,5
